# cargo-typed-data

./: Cargo.toml
src/: hf.rs  main.rs  schema_to_code.rs
